#删除无用文件，取消长按事件，增加自动填补图片功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
             android:gravity="center"
             android:text="表情三连发"
             android:textColor="@color/white"
-            android:textSize="@dimen/textsize_17" />
+            android:textSize="17sp" />
 
     </LinearLayout>
 
