--- a/app/src/main/res/layout/activity_triple_send.xml
+++ b/app/src/main/res/layout/activity_triple_send.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootview"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -44,7 +43,7 @@
                 android:background="@null"
                 android:gravity="center"
                 android:hint="标题"
-                android:imeOptions="actionDone"
+                android:imeOptions="actionNext"
                 android:inputType="text"
                 android:maxLength="10"
                 android:maxLines="1"
@@ -90,7 +89,7 @@
                 android:background="@null"
                 android:gravity="center"
                 android:hint="第一句话"
-                android:imeOptions="actionDone"
+                android:imeOptions="actionNext"
                 android:inputType="text"
                 android:maxLength="6"
                 android:maxLines="1"
@@ -107,7 +106,7 @@
                 android:background="@null"
                 android:gravity="center"
                 android:hint="第二句话"
-                android:imeOptions="actionDone"
+                android:imeOptions="actionNext"
                 android:inputType="text"
                 android:maxLength="6"
                 android:maxLines="1"
@@ -144,32 +143,45 @@
             android:textColor="@color/white"
             android:textSize="17sp" />
 
-        <TextView
-            android:id="@+id/tv_path"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            tools:text="保存路径：" />
-
         <ImageView
             android:id="@+id/iv_preview"
-            android:layout_width="300dp"
+            android:layout_width="match_parent"
             android:layout_height="150dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="10dp"
             android:background="@color/white"
             android:scaleType="fitCenter" />
 
-        <TextView
-            android:id="@+id/tv_delete"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_margin="20dp"
-            android:background="@drawable/selector_bg_button_green"
-            android:gravity="center"
-            android:text="删除"
-            android:textColor="@color/white"
-            android:textSize="17sp" />
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_do_save"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_margin="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/selector_bg_button_green"
+                android:gravity="center"
+                android:text="保存语录"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+            <TextView
+                android:id="@+id/tv_do_send"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_margin="20dp"
+                android:layout_weight="1"
+                android:background="@drawable/selector_bg_button_green"
+                android:gravity="center"
+                android:text="发送图片"
+                android:textColor="@color/white"
+                android:textSize="17sp" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
