--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,5 +27,7 @@
     <!--0%  	00-->
 
     <color name="black">#000000</color>
+    <color name="black_90">#E6000000</color>
     <color name="white">#FFFFFF</color>
+    <color name="color_F1F1F1">#F1F1F1</color>
 </resources>
