--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -7,7 +7,11 @@
 
         <external-path
             name="external_images"
-            path="Android/data/com.android.emoticoncreater/files/表情包生成器" />
+            path="DCIM/表情包生成器" />
+
+        <external-path
+            name="external_cache_images"
+            path="DCIM/表情包生成器/Cache" />
 
     </paths>
 </resources>
