--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -6,6 +6,26 @@
         <item >Dark</item>
     </array>
 
+    <array name="theme_list">
+        <item>@string/green</item>
+        <item>@string/red</item>
+        <item>@string/pink</item>
+        <item>@string/indigo</item>
+        <item>@string/teal</item>
+        <item>@string/orange</item>
+        <item>@string/purple</item>
+        <item>@string/blue</item>
+        <item>@string/brown</item>
+        <item>@string/grey</item>
+        <item>@string/white</item>
+        <item>@string/black</item>
+        <item>@string/dark</item>
+    </array>
+
+    <array name="theme_color_list">
+
+    </array>
+
     <array name="language_array">
         <item >English</item>
         <item >简体中文</item>
