--- a/app/src/main/res/values/theme_dark.xml
+++ b/app/src/main/res/values/theme_dark.xml
@@ -6,9 +6,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <color name="dark_color_primary">#2D3035</color>
-    <color name="dark_color_primary_blur">#DD2D3035</color>
     <color name="dark_color_primary_dark">#26282C</color>
-    <color name="dark_color_accent">@color/material_green_accent_700</color>
+    <color name="dark_color_accent">@color/material_light_white</color>
     <color name="dark_color_window_background">#22252A</color>
     <color name="dark_text_color_primary">@color/material_light_white</color>
     <color name="dark_text_color_secondary">@color/material_grey_500</color>
@@ -32,17 +31,12 @@
         <item name="title_color">@color/dark_title_color</item>
         <item name="subtitle_color">@color/dark_subtitle_color</item>
         <item name="selected_color">@color/dark_selected_color</item>
-        <item name="color_primary_blur">@color/dark_color_primary_blur</item>
         <item name="popup_theme">@style/PopupThemeDark</item>
         <item name="appbar_theme">@style/AppbarThemeDark</item>
         <item name="android:contextPopupMenuStyle" tools:targetApi="n">@style/ContextPopupThemeDark</item>
         <item name="popup_menu_theme">@style/PopupMenuDark</item>
-    </style>
-
-    <style name="ThemeDark.Teal" parent="ThemeDark">
-        <item name="colorAccent">@color/material_teal_accent_700</item>
-        <item name="alertDialogTheme">@style/DialogThemeDark.Teal</item>
-        <item name="android:alertDialogTheme">@style/DialogThemeDark.Teal</item>
+        <item name="alertDialogTheme">@style/DialogThemeDark</item>
+        <item name="android:alertDialogTheme">@style/DialogThemeDark</item>
     </style>
 
     <style name="DialogThemeDark" parent="Theme.AppCompat.Dialog.Alert">
@@ -56,10 +50,6 @@
     </style>
 
     <style name="AppbarThemeDark" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-    </style>
-
-    <style name="DialogThemeDark.Teal" parent="DialogThemeDark">
-        <item name="colorAccent">@color/material_teal_accent_700</item>
     </style>
 
     <style name="PopupMenuDark" parent="Widget.AppCompat.PopupMenu">
