--- a/app/src/main/res/drawable/selector_bg_button.xml
+++ b/app/src/main/res/drawable/selector_bg_button.xml
@@ -2,13 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimaryDark" />
+            <solid android:color="?attr/colorPrimaryDark" />
             <corners android:radius="3dp" />
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="?attr/colorPrimary" />
             <corners android:radius="3dp" />
         </shape>
     </item>
