--- a/app/src/main/res/layout/activity_triple_send.xml
+++ b/app/src/main/res/layout/activity_triple_send.xml
@@ -8,14 +8,14 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="?attr/appbar_theme">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:popupTheme="?attr/popup_theme"
             app:titleTextColor="@android:color/white" />
 
     </android.support.design.widget.AppBarLayout>
@@ -137,7 +137,7 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_margin="20dp"
-            android:background="@drawable/selector_bg_button_green"
+            android:background="@drawable/selector_bg_button"
             android:gravity="center"
             android:text="生成"
             android:textColor="@color/white"
@@ -163,7 +163,7 @@
                 android:layout_height="40dp"
                 android:layout_margin="20dp"
                 android:layout_weight="1"
-                android:background="@drawable/selector_bg_button_green"
+                android:background="@drawable/selector_bg_button"
                 android:gravity="center"
                 android:text="保存语录"
                 android:textColor="@color/white"
@@ -175,7 +175,7 @@
                 android:layout_height="40dp"
                 android:layout_margin="20dp"
                 android:layout_weight="1"
-                android:background="@drawable/selector_bg_button_green"
+                android:background="@drawable/selector_bg_button"
                 android:gravity="center"
                 android:text="发送图片"
                 android:textColor="@color/white"
