--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,13 +4,10 @@
 -->
 <resources>
 
-    <attr name="icon_color" format="color|reference"/>
-    <attr name="card_background" format="color|reference"/>
-    <attr name="title_color" format="color|reference"/>
-    <attr name="subtitle_color" format="color|reference"/>
-    <attr name="selected_color" format="color|reference"/>
-    <attr name="appbar_theme" format="reference"/>
-    <attr name="popup_theme" format="reference"/>
-    <attr name="popup_menu_theme" format="reference"/>
+    <attr name="appbar_theme" format="reference" />
+    <attr name="popup_theme" format="reference" />
+    <attr name="title_color" format="reference" />
+    <attr name="subtitle_color" format="reference" />
+    <attr name="icon_color" format="reference" />
 
 </resources>
