#告诉你个秘密 所需素材

--- a/app/src/main/res/layout/activity_tell_the_secret.xml
+++ b/app/src/main/res/layout/activity_tell_the_secret.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootview"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -21,35 +20,12 @@
 
     </android.support.design.widget.AppBarLayout>
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center_horizontal"
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <TextView
-            android:id="@+id/tv_triple_send"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_margin="20dp"
-            android:background="@drawable/selector_bg_button_green"
-            android:gravity="center"
-            android:text="表情三连发"
-            android:textColor="@color/white"
-            android:textSize="17sp" />
-
-        <TextView
-            android:id="@+id/tv_secret"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:background="@drawable/selector_bg_button_green"
-            android:gravity="center"
-            android:text="告诉你个秘密"
-            android:textColor="@color/white"
-            android:textSize="17sp" />
 
     </LinearLayout>
 
