#告诉你个秘密 选择图片界面实现，公共layout抽取，代码逻辑优化

--- a/app/src/main/res/layout/activity_secret_list.xml
+++ b/app/src/main/res/layout/activity_secret_list.xml
@@ -7,10 +7,17 @@
 
     <include layout="@layout/layout_appbar" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_proverb_list"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_secret_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
