--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootview"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:titleTextColor="@android:color/white" />
-
-    </android.support.design.widget.AppBarLayout>
-
+    <include layout="@layout/layout_appbar" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,8 +13,8 @@
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <TextView
-            android:id="@+id/tv_triple_send"
+        <Button
+            android:id="@+id/btn_triple_send"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_margin="20dp"
@@ -39,8 +24,8 @@
             android:textColor="@color/white"
             android:textSize="17sp" />
 
-        <TextView
-            android:id="@+id/tv_secret"
+        <Button
+            android:id="@+id/btn_secret"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginEnd="20dp"
