--- a/app/src/main/res/layout/activity_triple_send.xml
+++ b/app/src/main/res/layout/activity_triple_send.xml
@@ -5,20 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:titleTextColor="@android:color/white" />
-
-    </android.support.design.widget.AppBarLayout>
+    <include layout="@layout/layout_appbar" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -132,8 +119,8 @@
 
         </RelativeLayout>
 
-        <TextView
-            android:id="@+id/tv_do_create"
+        <Button
+            android:id="@+id/btn_do_create"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_margin="20dp"
@@ -157,8 +144,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_do_save"
+            <Button
+                android:id="@+id/btn_do_save"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_margin="20dp"
@@ -169,8 +156,8 @@
                 android:textColor="@color/white"
                 android:textSize="17sp" />
 
-            <TextView
-                android:id="@+id/tv_do_send"
+            <Button
+                android:id="@+id/btn_do_send"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_margin="20dp"
