--- a/app/src/main/res/layout/item_secret_list.xml
+++ b/app/src/main/res/layout/item_secret_list.xml
@@ -21,8 +21,11 @@
         android:layout_below="@+id/iv_picture"
         android:layout_marginBottom="10dp"
         android:gravity="center"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
         android:textColor="@color/black"
-        android:textSize="16sp"
+        android:textSize="18sp"
+        android:textStyle="bold"
         tools:text="今年过年不放假，而且还没有工资" />
 
     <ImageButton
