--- a/app/src/main/res/layout/item_secret_picture_list.xml
+++ b/app/src/main/res/layout/item_secret_picture_list.xml
@@ -8,6 +8,7 @@
     android:layout_marginEnd="15dp"
     android:layout_marginStart="15dp"
     android:layout_marginTop="10dp"
+    android:transitionName="@string/transition_name_secret"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="3dp"
     app:cardElevation="6dp"
@@ -23,7 +24,7 @@
             android:id="@+id/iv_picture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:scaleType="centerCrop"
+            tools:scaleType="fitCenter"
             tools:src="@drawable/img_1" />
 
         <TextView
@@ -34,7 +35,7 @@
             android:textColor="@color/black_90"
             android:textSize="18sp"
             android:textStyle="bold"
-            tools:text="伏尔泰 + 乌蝇哥" />
+            tools:text="福尔泰 + 乌蝇哥" />
 
     </LinearLayout>
 
