--- a/app/src/main/res/layout/activity_tell_the_secret.xml
+++ b/app/src/main/res/layout/activity_tell_the_secret.xml
@@ -18,23 +18,25 @@
             android:id="@+id/rv_secret_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
             android:layout_weight="1"
-            android:background="@color/white"
             android:foregroundGravity="center_horizontal"
+            android:paddingEnd="20dp"
+            android:paddingStart="20dp"
             android:scrollbars="none" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingBottom="20dp"
+            android:paddingTop="20dp">
 
             <Button
                 android:id="@+id/btn_add"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
-                android:layout_margin="20dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="20dp"
                 android:layout_weight="1"
                 android:background="@drawable/selector_bg_button_green"
                 android:gravity="center"
@@ -46,7 +48,8 @@
                 android:id="@+id/btn_do_create"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
-                android:layout_margin="20dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:background="@drawable/selector_bg_button_green"
                 android:gravity="center"
