--- a/app/src/main/res/layout/activity_secret_edit.xml
+++ b/app/src/main/res/layout/activity_secret_edit.xml
@@ -26,7 +26,7 @@
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="3dp"
             app:cardElevation="6dp"
-            app:contentPadding="5dp">
+            app:contentPadding="10dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -36,6 +36,8 @@
                     android:id="@+id/iv_picture"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY"
                     tools:scaleType="fitCenter"
                     tools:src="@drawable/img_1" />
 
@@ -46,6 +48,7 @@
                     android:layout_alignEnd="@+id/iv_picture"
                     android:layout_alignStart="@+id/iv_picture"
                     android:layout_below="@+id/iv_picture"
+                    android:layout_marginTop="5dp"
                     android:background="@color/white"
                     android:gravity="center"
                     android:imeOptions="actionDone"
