--- a/app/src/main/res/layout/activity_triple_send.xml
+++ b/app/src/main/res/layout/activity_triple_send.xml
@@ -35,7 +35,8 @@
                 android:maxLength="10"
                 android:maxLines="1"
                 android:textColor="@color/black"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/iv_picture1"
@@ -43,7 +44,7 @@
                 android:layout_height="100dp"
                 android:layout_alignStart="@+id/et_title"
                 android:layout_below="@+id/et_title"
-                android:background="@drawable/btn_plus"
+                android:background="@drawable/ic_add_picture"
                 android:scaleType="centerCrop" />
 
             <ImageView
@@ -54,7 +55,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
                 android:layout_toEndOf="@+id/iv_picture1"
-                android:background="@drawable/btn_plus"
+                android:background="@drawable/ic_add_picture"
                 android:scaleType="centerCrop" />
 
             <ImageView
@@ -63,7 +64,7 @@
                 android:layout_height="100dp"
                 android:layout_below="@+id/et_title"
                 android:layout_toEndOf="@+id/iv_picture2"
-                android:background="@drawable/btn_plus"
+                android:background="@drawable/ic_add_picture"
                 android:scaleType="centerCrop" />
 
             <EditText
@@ -81,7 +82,8 @@
                 android:maxLength="6"
                 android:maxLines="1"
                 android:textColor="@color/black"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/et_name2"
@@ -98,7 +100,8 @@
                 android:maxLength="6"
                 android:maxLines="1"
                 android:textColor="@color/black"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/et_name3"
@@ -115,7 +118,8 @@
                 android:maxLength="6"
                 android:maxLines="1"
                 android:textColor="@color/black"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:textStyle="bold" />
 
         </RelativeLayout>
 
