--- a/app/src/main/res/layout/item_secret_list.xml
+++ b/app/src/main/res/layout/item_secret_list.xml
@@ -2,14 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/iv_picture"
-        android:layout_width="270dp"
-        android:layout_height="154dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:adjustViewBounds="true"
         android:padding="10dp"
+        android:scaleType="fitXY"
         tools:src="@drawable/img_2" />
 
     <TextView
