--- a/app/src/main/res/layout/item_secret_picture_list.xml
+++ b/app/src/main/res/layout/item_secret_picture_list.xml
@@ -12,7 +12,7 @@
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="3dp"
     app:cardElevation="6dp"
-    app:contentPadding="5dp">
+    app:contentPadding="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +24,8 @@
             android:id="@+id/iv_picture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:scaleType="fitCenter"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
             tools:src="@drawable/img_1" />
 
         <TextView
