#增加浮动按钮

--- a/app/src/main/res/layout/activity_secret_edit.xml
+++ b/app/src/main/res/layout/activity_secret_edit.xml
@@ -8,73 +8,53 @@
 
     <include layout="@layout/layout_appbar" />
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="20dp"
+        android:transitionName="@string/transition_name_secret"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="3dp"
+        app:cardElevation="6dp"
+        app:contentPadding="10dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="20dp"
-            android:transitionName="@string/transition_name_secret"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="3dp"
-            app:cardElevation="6dp"
-            app:contentPadding="10dp">
+            android:layout_height="match_parent">
 
-            <RelativeLayout
+            <ImageView
+                android:id="@+id/iv_picture"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                tools:scaleType="fitCenter"
+                tools:src="@drawable/img_1" />
 
-                <ImageView
-                    android:id="@+id/iv_picture"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitXY"
-                    tools:scaleType="fitCenter"
-                    tools:src="@drawable/img_1" />
+            <EditText
+                android:id="@+id/et_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignEnd="@+id/iv_picture"
+                android:layout_alignStart="@+id/iv_picture"
+                android:layout_below="@+id/iv_picture"
+                android:layout_marginTop="5dp"
+                android:background="@color/white"
+                android:gravity="center"
+                android:imeOptions="actionDone"
+                android:inputType="textMultiLine"
+                android:maxLength="20"
+                android:maxLines="2"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:hint="福尔泰 + 乌蝇哥"
+                tools:text="今年过年不放假，而且还没有工资" />
 
-                <EditText
-                    android:id="@+id/et_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignEnd="@+id/iv_picture"
-                    android:layout_alignStart="@+id/iv_picture"
-                    android:layout_below="@+id/iv_picture"
-                    android:layout_marginTop="5dp"
-                    android:background="@color/white"
-                    android:gravity="center"
-                    android:imeOptions="actionDone"
-                    android:inputType="textMultiLine"
-                    android:maxLength="20"
-                    android:maxLines="2"
-                    android:minHeight="30dp"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
-                    tools:hint="福尔泰 + 乌蝇哥"
-                    tools:text="今年过年不放假，而且还没有工资" />
-
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-
-        <Button
-            android:id="@+id/btn_add"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_below="@+id/et_title"
-            android:layout_margin="20dp"
-            android:background="@drawable/selector_bg_button_green"
-            android:gravity="center"
-            android:text="添加"
-            android:textColor="@color/white"
-            android:textSize="17sp" />
-    </LinearLayout>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
 
 </android.support.design.widget.CoordinatorLayout>
