--- a/app/src/main/res/layout/item_secret_list.xml
+++ b/app/src/main/res/layout/item_secret_list.xml
@@ -1,45 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:layout_marginBottom="5dp"
+    android:layout_marginEnd="15dp"
+    android:layout_marginStart="15dp"
+    android:layout_marginTop="5dp"
+    android:transitionName="@string/transition_name_secret"
+    app:cardBackgroundColor="@color/white"
+    app:cardCornerRadius="3dp"
+    app:cardElevation="5dp">
 
-    <ImageView
-        android:id="@+id/iv_picture"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginEnd="20dp"
-        android:layout_marginStart="20dp"
-        android:adjustViewBounds="true"
-        android:padding="10dp"
-        android:scaleType="fitXY"
-        tools:src="@drawable/img_2" />
+        android:background="@color/white">
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/iv_picture"
-        android:layout_alignStart="@+id/iv_picture"
-        android:layout_below="@+id/iv_picture"
-        android:layout_marginBottom="10dp"
-        android:gravity="center"
-        android:paddingEnd="10dp"
-        android:paddingStart="10dp"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        tools:text="今年过年不放假，而且还没有工资" />
+        <ImageView
+            android:id="@+id/iv_picture"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            tools:src="@drawable/img_2" />
 
-    <ImageButton
-        android:id="@+id/ib_delete"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentEnd="true"
-        android:background="@color/white"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_delete" />
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/iv_picture"
+            android:layout_alignStart="@+id/iv_picture"
+            android:layout_below="@+id/iv_picture"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            tools:text="今年过年不放假，而且还没有工资" />
 
-</RelativeLayout>
+        <ImageButton
+            android:id="@+id/ib_delete"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:background="@color/white"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_delete" />
+
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
