--- a/app/src/main/res/drawable/ic_delete.xml
+++ b/app/src/main/res/drawable/ic_delete.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="1024.0"
-    android:viewportWidth="1024.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF101010" android:pathData="M0,0l0,1024 1024,0L1024,0 0,0zM819.2,787.2c6.4,6.4 6.4,19.2 0,25.6 -6.4,6.4 -6.4,6.4 -12.8,6.4s-12.8,0 -12.8,-6.4L512,531.2l-281.6,281.6c-6.4,6.4 -6.4,6.4 -12.8,6.4 -6.4,0 -12.8,0 -12.8,-6.4 -6.4,-6.4 -6.4,-19.2 0,-25.6l281.6,-281.6L204.8,224C192,217.6 192,204.8 204.8,198.4s19.2,-6.4 25.6,0L512,480l281.6,-281.6c6.4,-6.4 19.2,-6.4 25.6,0 6.4,6.4 6.4,19.2 0,25.6L537.6,505.6 819.2,787.2z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportHeight="1024.0"
+    android:viewportWidth="1024.0">
+    <path
+        android:fillColor="#FF101010"
+        android:pathData="M0,0l0,1024 1024,0L1024,0 0,0zM819.2,787.2c6.4,6.4 6.4,19.2 0,25.6 -6.4,6.4 -6.4,6.4 -12.8,6.4s-12.8,0 -12.8,-6.4L512,531.2l-281.6,281.6c-6.4,6.4 -6.4,6.4 -12.8,6.4 -6.4,0 -12.8,0 -12.8,-6.4 -6.4,-6.4 -6.4,-19.2 0,-25.6l281.6,-281.6L204.8,224C192,217.6 192,204.8 204.8,198.4s19.2,-6.4 25.6,0L512,480l281.6,-281.6c6.4,-6.4 19.2,-6.4 25.6,0 6.4,6.4 6.4,19.2 0,25.6L537.6,505.6 819.2,787.2z" />
 </vector>
