--- a/app/src/main/res/layout/activity_show_secret.xml
+++ b/app/src/main/res/layout/activity_show_secret.xml
@@ -7,42 +7,36 @@
 
     <include layout="@layout/layout_appbar" />
 
-    <LinearLayout
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/scrollview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <android.support.v4.widget.NestedScrollView
+        <ImageView
+            android:id="@+id/iv_picture"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:layout_marginStart="15dp"
+            android:adjustViewBounds="true"
+            android:background="@color/white"
+            android:scaleType="fitXY" />
 
-            <ImageView
-                android:id="@+id/iv_picture"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="40dp"
-                android:layout_marginStart="40dp"
-                android:adjustViewBounds="true"
-                android:background="@color/white"
-                android:scaleType="fitXY" />
-
-        </android.support.v4.widget.NestedScrollView>
-
-    </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btn_send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:src="@drawable/ic_send"
         app:backgroundTint="?attr/colorPrimary"
-        app:fabSize="normal" />
+        app:fabSize="normal"
+        app:layout_anchor="@+id/scrollview"
+        app:layout_anchorGravity="bottom|end"
+        app:layout_behavior="@string/floating_button_behavior" />
 
 </android.support.design.widget.CoordinatorLayout>
