--- a/app/src/main/res/layout/activity_tell_the_secret.xml
+++ b/app/src/main/res/layout/activity_tell_the_secret.xml
@@ -7,58 +7,25 @@
 
     <include layout="@layout/layout_appbar" />
 
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_secret_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:foregroundGravity="center_horizontal"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_secret_list"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:foregroundGravity="center_horizontal"
-            android:paddingEnd="10dp"
-            android:paddingStart="10dp"
-            android:scrollbars="none" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingBottom="20dp"
-            android:paddingTop="20dp">
-
-            <Button
-                android:id="@+id/btn_add"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="20dp"
-                android:layout_weight="1"
-                android:background="@drawable/selector_bg_button_green"
-                android:gravity="center"
-                android:text="添加"
-                android:textColor="@color/white"
-                android:textSize="17sp" />
-
-            <Button
-                android:id="@+id/btn_do_create"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_weight="1"
-                android:background="@drawable/selector_bg_button_green"
-                android:gravity="center"
-                android:text="生成"
-                android:textColor="@color/white"
-                android:textSize="17sp" />
-
-        </LinearLayout>
-
-    </LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btn_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:src="@drawable/ic_add"
+        app:backgroundTint="?attr/colorPrimary"
+        app:fabSize="normal"
+        app:layout_anchor="@+id/rv_secret_list"
+        app:layout_anchorGravity="bottom|end"
+        app:layout_behavior="@string/floating_button_behavior" />
 
 </android.support.design.widget.CoordinatorLayout>
