--- a/app/src/main/res/layout/activity_three_proverb_list.xml
+++ b/app/src/main/res/layout/activity_three_proverb_list.xml
@@ -11,6 +11,7 @@
         android:id="@+id/rv_proverb_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="5dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </android.support.design.widget.CoordinatorLayout>
