--- a/app/src/main/res/layout/item_three_proverb_list.xml
+++ b/app/src/main/res/layout/item_three_proverb_list.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:layout_margin="5dp"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="4dp"
-    app:cardElevation="10dp"
+    app:cardElevation="5dp"
     app:contentPadding="5dp">
 
     <LinearLayout
@@ -19,45 +19,34 @@
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:lines="2"
             android:textColor="@color/black_90"
             android:textSize="16sp"
             tools:text="标题" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tv_first"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:gravity="center_vertical">
+            android:layout_height="wrap_content"
+            android:textColor="@color/black_90"
+            android:textSize="14sp"
+            tools:text="标题" />
 
-            <TextView
-                android:id="@+id/tv_first"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="@color/black_90"
-                android:textSize="14sp"
-                tools:text="标题" />
+        <TextView
+            android:id="@+id/tv_second"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black_90"
+            android:textSize="14sp"
+            tools:text="标题" />
 
-            <TextView
-                android:id="@+id/tv_second"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="5dp"
-                android:layout_marginStart="5dp"
-                android:layout_weight="1"
-                android:textColor="@color/black_90"
-                android:textSize="14sp"
-                tools:text="标题" />
-
-            <TextView
-                android:id="@+id/tv_third"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="@color/black_90"
-                android:textSize="14sp"
-                tools:text="标题" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tv_third"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black_90"
+            android:textSize="14sp"
+            tools:text="标题" />
 
         <View
             android:layout_width="match_parent"
@@ -85,9 +74,9 @@
                 android:gravity="center"
                 android:paddingEnd="10dp"
                 android:paddingStart="10dp"
+                android:text="删除"
                 android:textColor="@color/black_90"
-                android:textSize="14sp"
-                android:text="删除" />
+                android:textSize="14sp" />
 
         </LinearLayout>
 
