--- a/app/src/main/res/layout/activity_secret_edit.xml
+++ b/app/src/main/res/layout/activity_secret_edit.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootview"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/color_FAFAFA">
 
     <include layout="@layout/layout_appbar" />
 
