--- a/app/src/main/res/layout/item_secret_picture_list.xml
+++ b/app/src/main/res/layout/item_secret_picture_list.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:textColor="@color/black_90"
+            android:textColor="@color/color_101010"
             android:textSize="18sp"
             android:textStyle="bold"
             tools:text="福尔泰 + 乌蝇哥" />
