--- a/app/src/main/res/layout/activity_secret_edit.xml
+++ b/app/src/main/res/layout/activity_secret_edit.xml
@@ -34,7 +34,7 @@
                 android:adjustViewBounds="true"
                 android:scaleType="fitXY"
                 tools:scaleType="fitCenter"
-                tools:src="@drawable/img_1" />
+                tools:src="@raw/img_1" />
 
             <EditText
                 android:id="@+id/et_title"
@@ -44,7 +44,7 @@
                 android:layout_alignStart="@+id/iv_picture"
                 android:layout_below="@+id/iv_picture"
                 android:layout_marginTop="5dp"
-                android:background="@color/white"
+                android:background="@null"
                 android:gravity="center"
                 android:imeOptions="actionDone"
                 android:inputType="textMultiLine"
