--- a/app/src/main/res/layout/item_secret_picture_list.xml
+++ b/app/src/main/res/layout/item_secret_picture_list.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
-            tools:src="@drawable/img_1" />
+            tools:src="@raw/img_1" />
 
         <TextView
             android:id="@+id/tv_title"
